# PoZK

./: README.md
.github/workflows/: deploy-docker-main.yml  deploy-miner.yml  deploy-prover.yml  deploy-server.yml  depoloy-frontend.yml
contracts/: README.md  hardhat.config.js  package.json
contracts/contracts/: Addresses.sol  Agent.sol  Controller.sol  Epoch.sol  Game.sol  GameMarket.sol  L2Vesting.sol  ProofMarket.sol  Prover.sol  ProverMarket.sol  Reward.sol  Stake.sol  Subscription.sol  Task.sol  TaskMarket.sol  Token.sol  Vesting.sol
contracts/contracts/interface/: IAddresses.sol  IController.sol  IEpoch.sol  IGameMarket.sol  IProver.sol  IProverMarket.sol  IReward.sol  IStake.sol  ITask.sol  ITaskMarket.sol  IVerifier.sol  IVesting.sol
contracts/contracts/l2/: L2Token.sol  L2Vesting.sol
contracts/contracts/others/: DemoProver.sol  MiningCompetition.sol
contracts/contracts/utils/: FixedMath.sol
contracts/docs/: Addresses.md  Controller.md  Epoch.md  GameMarket.md  L2Vesting.md  ProverMarket.md  README.md  Reward.md  Stake.md  Subscription.md  Task.md  TaskMarket.md  Token.md  Vesting.md  Wallet.md  index.md
contracts/docs/others/: DemoProver.md  MiningCompetition.md
contracts/scripts/: abi.js  address_utils.js  competition.js  deploy.js  mock-task.js  prover.js  register_prover.js  update_config.js  upgrade.js  workflow.js
contracts/test/: dispute.js  rewards.js  utils.js
deploy/: config.toml  docker-compose.yml  nginx-miner.conf
frontend/: .eslintrc.json  .gitignore  Dockerfile  README.md  drizzle.config.ts  ecosystem.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/script/: replace.sh  start.sh
frontend/src/: middleware_back.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/components/hooks/: useAuth.ts  useFailedRoute.tsx  useGetMinerStaking.ts  useGetStatistics.ts  useGetUserBalance.ts  useInitSubgraph.tsx  useMounted.ts  useSession.tsx  useSortProvers.ts
frontend/src/components/provider/: ApolloProvider.tsx  MountedProvider.tsx  RecoilRootProvider.tsx  SessionProvider.tsx  Web3ModalProvider.tsx
frontend/src/components/queries/: epoches.ts  minerTests.ts  provers.ts  staking.ts  tasks.ts
frontend/src/components/state/: balanceStore.ts  (+5 more)
frontend/src/constants/: ABI  constants.ts  networks.json
frontend/src/lib/: BigNumberJs.ts  avatar.ts  day.ts  fetch.ts  font.ts  generateMetadata.ts  shorten.ts  viem.ts
frontend/src/services/: pozk.ts  zeroGas.ts
frontend/src/types/: IAction.ts  IProver.ts  charts.ts  cookies.ts  core.ts  epoch.ts  global.d.ts  staking.ts
frontend/src/web3/: constants.ts  wagmi.config.ts  wallet.ts
frontend/web-app/: index.txt  rewards.txt
frontend/web-app/dashboard/: controller.txt
games/: README.md
provers/: README.md
provers/2048/: Dockerfile
provers/_template/: Dockerfile
provers/crypto-rumble/: Dockerfile
provers/shuffle/: Dockerfile
public/: localhost.json  networks.json  opbnbtestnet.json  zytrontestnet.json
public/ABI/: Epoch.json  GameMarket.json  L2Vesting.json  MiningCompetition.json  Prover.json  ProverMarket.json  Reward.json  Stake.json  Task.json  TaskMarket.json  Vesting.json
public/others/: Wallet.json
server/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/api/: Cargo.toml  README.md
server/api/src/: config.rs  lib.rs  main.rs  metrics.rs  p2p.rs  service.rs
server/api/src/app/: mod.rs
server/api/src/app/controllers/: agent.rs  auth.rs  connect.rs  controller.rs  mod.rs  prover.rs  task.rs
server/api/src/app/extensions/: auth.rs  error.rs  mod.rs  sys.rs
server/api/src/poem/: auth.rs  mod.rs  resp.rs  service.rs  utils.rs
server/api/src/poem/req/: controller.rs  login.rs  mod.rs  prover.rs
server/cli/: Cargo.toml  README.md  build.rs  config.toml
server/cli/src/: main.rs  networks.rs
server/cli/src/web_server/: cmd.rs  mod.rs
server/db/: Cargo.toml
server/db/src/: lib.rs
server/db/src/redb/: agent.rs  controller.rs  mod.rs  prover.rs  scan.rs  service.rs  task.rs
server/db/src/redb/table/: controller.rs  docker.rs  mod.rs
server/docker/: Cargo.toml
server/docker/src/: lib.rs  service.rs
server/local_utils/: Dockerfile-local  docker-run.sh
server/monitor/: Cargo.toml  build.rs
server/monitor/src/: config.rs  event.rs  lib.rs  monitor.rs  pool.rs  scan.rs  service.rs  task.rs  tx.rs  utils.rs
server/monitor/src/handle/: mod.rs  prover.rs  task.rs  tx.rs
server/utils/: Cargo.toml
server/utils/src/: lib.rs  message.rs  networks.rs  p2p.rs  utils.rs
server/web-app/: 404.html  dashboard.html  dashboard.txt  index.html  rewards.html
server/web-app/_next/static/chunks/: 09df8739.35981596124510e5.js  0e5ce63c-4341bf853958b706.js  1450-2be6f28c8b4d2197.js  2029-c178eb6fd10721bf.js  2652-12f74864376a4441.js  3304-3f713110cb3dc8f8.js  3494-1de21213a9ea298a.js  4453-8c1b3f074013152c.js  4722.ff537986d71f7e6b.js  5026.eb67ae7e08129e2e.js  508202eb.f5798daaa3c0e6eb.js  5318.ec543d2ff5edbf5d.js  5891-a30087e7e5c24c61.js  6323-cebc5d56a116c526.js  655-939debb37fa79daf.js  7494-f798b4f22c77a678.js  788-69cc5eee1ee85200.js  8918-e91ae4cd0ff10a49.js  8e1d74a4-1599bf65bbeb8f39.js  9174-5b38b3b39c8aafb6.js  9381.8d89ab77205e4eb7.js  9544.5af727a656cce6e8.js  main-app-f1960652f2e7a9b5.js
server/web-app/_next/static/chunks/app/: error-70f06f2613ef2fa4.js  loading-ce851bd28b27c3f0.js
server/web-app/_next/static/chunks/app/(auth)/dashboard/: page-ad8f99a76d6a5d60.js
server/web-app/_next/static/chunks/app/(auth)/dashboard/controller/: page-5e357f4cb418502c.js
server/web-app/_next/static/chunks/app/(auth)/dashboard/setting/: page-aef8d88da8ae2e66.js
server/web-app/_next/static/chunks/app/(auth)/dashboard/setting/[action]/: page-f0d6292640588345.js
server/web-app/_next/static/css/: c577c304491f7e29.css
server/web-app/dashboard/: controller.html  setting.html  setting.txt
server/web-app/dashboard/controller/: add.txt
(+126 files in other folders)
