[workspace]
resolver = "2"
members = ["api", "db", "docker", "monitor", "utils"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Zypher <dev@zypher.network>"]
readme = "README.md"
homepage = "https://zypher.network"
repository = "https://github.com/zypher-network/PoZK"
categories = ["cryptography"]
keywords = ["PoZK", "zytron", "miner"]
description = "PoZK miner"
license = "GPL-3.0-only"
include = ["public", "src", "Cargo.toml", "README.md"]

[workspace.dependencies]
pozk-db = { version = "0.2", path = "./db" }
pozk-docker = { version = "0.2", path = "./docker" }
pozk-monitor = { version = "0.2", path = "./monitor" }
pozk-utils = { version = "0.2", path = "./utils" }

anyhow = { version = "1.0", features = ["backtrace"] }
async-recursion = "1.1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
bollard = { version = "0.17", features = ["chrono"] }
chamomile = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ethers = "2.0"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = "9.3"
mime_guess = "2.0"
once_cell = "1.19"
rand = "0.8"
redb = "2.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
siwe = { version = "0.6.1", features = ["serde"] }
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"]  }
tracing = "0.1"
tracing-subscriber = "0.3"
