[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
serde.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
log.worspace = true
serde_json.workespace = true
poem = { workspace = true, features = ["anyhow"] }
poem-openapi = { workespace = true, features = ["swagger-ui"] }
uuid = { worksapce = true, features = ["v4"] }
tokio.workspace = true
ethers.workspace = true
once_cell.workspace = true
hmac.workspace = true
sha2.workspace = true
jwt.workspace = true
env_logger.workspace = true
