[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
db.workspace = true
docker.workspace = true

anyhow.workspace = true
clap.workspace = true
ethers.workspace = true
hmac.workspace = true
iri-string.workspace = true
jwt.workspace = true
log.workspace = true
once_cell.workspace = true
poem.workspace = true
poem-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
siwe.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
reqwest.workspace = true
