[package]
name = "pozk-miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
pozk-db.workspace = true
pozk-docker.workspace = true
pozk-monitor.workspace = true
pozk-utils.workspace = true

anyhow.workspace = true
axum.workspace = true
clap.workspace = true
chrono.workspace = true
ethers.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
mime_guess.workspace = true
once_cell.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
siwe.workspace = true
sysinfo.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
