[package]
name = "pozk-miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
api.workspace = true
db.workspace = true
docker.workspace = true
monitor.workspace = true

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
ethers.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true

[build-dependencies]
time.workspace = true