[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
ethers.workspace = true
log.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true