[package]
name = "docker"
version = "0.1.0"
edition = "2021"

[dependencies]
shiplift.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures-util.workspace = true
db = { path = "../db" }
reqwest.workspace = true
serde_json.workspace = true
log.worspace = true
poem-openapi.workespace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
poem = { workspace = true, features = ["anyhow"] }
poem-openapi = { workespace = true }
env_logger.workspace = true