[package]
name = "docker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
db.workspace = true

anyhow.workspace = true
bollard.workspace = true
chrono.workspace = true
futures-util.workspace = true
log.workspace = true
poem-openapi.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
poem.workspace = true
