[package]
name = "pozk-docker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
pozk-utils.workspace = true

anyhow.workspace = true
bollard.workspace = true
chrono.workspace = true
futures-util.workspace = true
tracing.workspace = true
