[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
tokio.workspace = true
db = { path = "../db" }
serde_json.workspace = true
serde.workspace = true
log.worspace = true
ethers.workspace = true
clap.workspace = true
docker = { path = "../docker" }
chrono.workspace = true
once_cell.workspace = true

[dev-dependencies]
env_logger.workspace = true
hex.workspace = true

[build-dependencies]
serde_json.workspace = true