[package]
name = "monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
db.workspace = true
docker.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ethers.workspace = true
log.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
hex.workspace = true

[build-dependencies]
serde_json.workspace = true