[package]
name = "pozk-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
pozk-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
ethers.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true