[package]
name = "pozk-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ethers.workspace = true
hex.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
